--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ NEXT_PUBLIC_GRAFBASE_API_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpYXQiOjE2OT
 
 GOOGLE_CLIENT_ID=414587665453-hb0a9ut4llpj8a8d1f4crnivihp8cqp4.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+
+NEXTAUTH_SECRET=f2mH4F/tTLHhvbw7liVC/XUfC+rGegu91STwgiH7PM8=
+NEXTAUTH_URL=https://localhost:3000
